--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,24 +4,31 @@
           android:versionCode="1"
           android:versionName="1.0">
     <uses-sdk android:minSdkVersion="11"/>
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
-        <activity android:name=".activities.TaskManager"
-                  android:label="@string/app_name">
+    <application
+        android:label="@string/app_name"
+        android:icon="@drawable/ic_launcher">
+        <activity
+            android:name=".activities.TaskManager"
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <activity android:name=".activities.TaskEditor"
+        <activity
+            android:name=".activities.TaskEditor"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:windowSoftInputMode="adjustUnspecified"/>
-        <activity android:name=".activities.PreferencesEditor"
-                  />
+        <activity
+            android:name=".activities.PreferencesEditor"/>
         <provider
             android:name=".persistence.database.TaskProvider"
             android:authorities="com.nullpointerengineering.android.pomodoro.provider.task">
         </provider>
+        <activity
+            android:name=".activities.PreferencesEditor"
+            android:label="Select Preferences"/>
+        <activity
+                android:name=".activities.Pomodoro"/>
     </application>
-    <activity android:name=".activities.PreferencesEditor"
-              android:label="Select Preferences"/>1
 </manifest>
