--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:icon="@drawable/ic_launcher">
         <activity
-            android:name=".activities.TaskManager"
+            android:name=".view.activities.TaskManager"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -16,19 +16,19 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.TaskEditor"
+            android:name=".view.activities.TaskEditor"
             android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:windowSoftInputMode="adjustUnspecified"/>
         <activity
-            android:name=".activities.PreferencesEditor"/>
+            android:name=".view.activities.PreferencesEditor"/>
         <provider
             android:name=".persistence.database.TaskProvider"
             android:authorities="com.nullpointerengineering.android.pomodoro.provider.task">
         </provider>
         <activity
-            android:name=".activities.PreferencesEditor"
+            android:name=".view.activities.PreferencesEditor"
             android:label="Select Preferences"/>
         <activity
-                android:name=".activities.Pomodoro"/>
+                android:name=".view.activities.Pomodoro"/>
     </application>
 </manifest>
